<resources>
    <string name="app_name">Power App</string>
    <string name="app_description">A simple app with power options</string>

    <string name="loading">Loading</string>

    <string name="Shutdown">Shutdown</string>
    <string name="Reboot">Reboot</string>
    <string name="SafeMode">Reboot into Safe Mode</string>
    <string name="Recovery">Reboot into Recovery</string>
    <string name="Bootloader">Reboot into Bootloader</string>
    <string name="EDL">Reboot into EDL</string>
    <string name="SoftReboot">Soft Reboot</string>
    <string name="SystemUI">Restart System UI</string>
    <string name="ScreenOff">Turn Off Screen</string>

    <string name="confirm_dialog">Are you sure?</string>
    <string name="confirm_dialog_summary">Are you sure that you want to perform the selected action?</string>

    <string name="action_failed">Action failed</string>
    <string name="action_failed_summary">Root is needed. Please enable root.</string>

    <string name="root">Request Root</string>
    <string name="pref">Settings</string>
    <string name="pref_theme">Change theme</string>
    <string name="pref_theme_summary">Choose between light, dark and black theme</string>
    <string name="pref_confirm_dialog">Confirm dialog</string>
    <string name="pref_confirm_dialog_summary">Ask for confirmation before performing an action</string>
    <string-array name="pref_theme_array_display">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Black theme</item>
        <item>Follow system theme</item>
    </string-array>
    <string-array name="pref_theme_array" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
        <item>auto</item>
    </string-array>

    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_app_version">App version</string>
    <string name="about_app_version_desc" translatable="false">%1$s (%2$d)</string>
    <string name="about_privacy">External Content</string>
    <string name="about_privacy_desc">Contributors are loaded from GitHub. Read their privacy policy for further information.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_contributors_desc">A list of the contributors</string>
    <string name="about_general">General</string>
    <string name="about_github">GitHub repository</string>
    <string name="about_license">License</string>
    <string name="about_license_desc" translatable="false">GPL-3.0</string>
    <string name="about_icons">Icons</string>
    <string name="about_icons_desc">Icons by Icons8 and Google</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_desc">A list of all used libraries</string>

    <string-array name="about_libraries" translatable="false">
        <item>Android AppCompat Library</item>
        <item>Android Preferences KTX</item>
        <item>Android Support Library Annotations</item>
        <item>Volley</item>
    </string-array>

    <string-array name="about_icons_array" translatable="false">
        <item>Icons8</item>
        <item>Google</item>
    </string-array>
</resources>
