<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    tools:context="io.github.domi04151309.powerapp.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/shutdown"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_shutdown"
            android:text="@string/Shutdown" />

        <Button
            android:id="@+id/reboot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_reboot"
            android:text="@string/Reboot" />

        <Button
            android:id="@+id/recovery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_recovery"
            android:text="@string/Recovery" />

        <Button
            android:id="@+id/bootloader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_bootloader"
            android:text="@string/Bootloader" />

        <Button
            android:id="@+id/soft_reboot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_soft_reboot"
            android:text="@string/SoftReboot" />

        <Button
            android:id="@+id/system_ui"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_restart_system_ui"
            android:text="@string/SystemUI" />

        <Button
            android:id="@+id/screen_off"
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame"
            android:drawableStart="@drawable/ic_round_screen_off"
            android:text="@string/ScreenOff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/root"
                style="?attr/secondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/root" />

            <Button
                android:id="@+id/prefBtn"
                style="?attr/secondaryButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pref" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>